--- a/detailpage.html
+++ b/detailpage.html
@@ -70,7 +70,220 @@
     </div>
     <div class="wrap" id="detail_wrap">
       <!-- logo 왼쪽 type -->
-      <header data-include-path="./outline/header.html"></header>
+      <header id="header" class="container">
+        <div class="inner">
+          <h1 class="logo">
+            <a href="#">
+              <img src="/images/comm/PRADA.svg" alt="PRADA" />
+            </a>
+          </h1>
+          <div class="header__right">
+            <div class="util">
+              <ul class="util__list">
+                <!-- a : 링크 연결 / button : 동작처리 -->
+                <!-- 링크 연결 없이 스크립트 처리 -->
+                <li>
+                  <button class="btn-g btn-search">
+                    <span class="material-icons-outlined"> search </span>
+                    <span class="blind">검색</span>
+                  </button>
+                  <button class="btn-g btn-cart">
+                    <span class="material-icons-outlined"> shopping_bag </span>
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <nav class="gnb-wrap">
+              <input
+                type="checkbox"
+                name="gnbNav"
+                id="gnbNav"
+                class="input-burger"
+              />
+              <label for="gnbNav" class="label-burger">
+                <span class="blind">전체 메뉴 보기</span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </label>
+              <div id="gnb">
+                <a href="#" class="link-logo">
+                  <img
+                    src="/images/comm/SVG/prada white.svg"
+                    alt="PRADA"
+                    class="img-logo"
+                  />
+                </a>
+                <div class="heder_accordion_wrap">
+                  <button class="header_accordion">
+                    <h3 class="nav_accordion_tit">MAN</h3>
+                    <i class="las la-chevron-down"></i>
+                  </button>
+                  <div class="panel">
+                    <ul class="nav_wrap">
+                      <li class="nav_item">
+                        <a href="#">전체보기</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">재킷/코트</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">셔츠</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">데님</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">아우터</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">니트웨어</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">티셔츠/폴로셔츠</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">가죽의류</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">팬츠/버뮤다</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">조깅/스웨트셔츠</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <button class="header_accordion">
+                    <h3 class="nav_accordion_tit">WOMAN</h3>
+                    <i class="las la-chevron-down"></i>
+                  </button>
+                  <div class="panel">
+                    <ul class="nav_wrap">
+                      <li class="nav_item">
+                        <a href="#">전체보기</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">드레스</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">니트웨어</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">셔츠/탑</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">스커트</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">팬츠/반바지</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">아우터</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">재킷/코트</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">데님</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">티셔츠/스웨트셔츠</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">가죽의류</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">파지마/언더웨어</a>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <button class="header_accordion">
+                    <h3 class="nav_accordion_tit">BAG</h3>
+                    <i class="las la-chevron-down"></i>
+                  </button>
+                  <div class="panel">
+                    <ul class="nav_wrap">
+                      <li class="nav_item">
+                        <a href="#">전체보기</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">메신저백</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">백팩/벨트백</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">토트백</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">숄더백</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">탑 핸들</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">미니백</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <button class="header_accordion">
+                    <h3 class="nav_accordion_tit">SHOES</h3>
+                    <i class="las la-chevron-down"></i>
+                  </button>
+                  <div class="panel">
+                    <ul class="nav_wrap">
+                      <li class="nav_item">
+                        <a href="#">전체보기</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">로퍼</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">샌들</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">펌프스 및 발레리나</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">스니커즈</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">레이스업</a>
+                      </li>
+                      <li class="nav_item">
+                        <a href="#">부츠</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- <ul class="lst-categ">
+                  <li class="categ-item">
+                    <a href="#">MAN</a>
+                  </li>
+                  <li class="categ-item">
+                    <a href="#">WOMAN</a>
+                  </li>
+                  <li class="categ-item">
+                    <a href="#">SHOE</a>
+                  </li>
+                  <li class="categ-item">
+                    <a href="#">BAG</a>
+                  </li>
+                </ul> -->
+                <!-- <ul class="lst-categ2">
+                  <li class="categ-item2">
+                    <a href="#" class="menu-wish">위시리스트</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-phone">문의하기</a>
+                  </li>
+                </ul> -->
+              </div>
+            </nav>
+          </div>
+        </div>
+      </header>
       <main id="main">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
