--- a/outline/header.html
+++ b/outline/header.html
@@ -37,7 +37,7 @@
               class="img-logo"
             />
           </a>
-          <!-- <div class="heder_accordion_wrap">
+          <div class="heder_accordion_wrap">
             <button class="header_accordion">
               <h3 class="nav_accordion_tit">도와드릴까요?</h3>
               <i class="las la-chevron-down"></i>
@@ -119,8 +119,8 @@
                 </li>
               </ul>
             </div>
-          </div> -->
-          <ul class="lst-categ">
+          </div>
+          <!-- <ul class="lst-categ">
             <li class="categ-item">
               <a href="#">MAN</a>
             </li>
@@ -133,7 +133,7 @@
             <li class="categ-item">
               <a href="#">BAG</a>
             </li>
-          </ul>
+          </ul> -->
           <ul class="lst-categ2">
             <li class="categ-item2">
               <a href="#" class="menu-wish">위시리스트</a>
