--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -365,7 +366,7 @@
             </section>
               <section class="thumb_banner">
                 <h3 class="thumbBanner_tit">PRADA Boots</h3>
-                <p class="thumbBanner_desc"> meet Boots</p>
+                <p class="thumbBanner_desc">Boots meet warm</p>
                 <div class="thumbBanner_lst">
                   <div class="thumbBanner_item">
                     <a href="#">
@@ -524,7 +525,84 @@
               </li>
             </ul>
           </section>
-          </div>
+          <section class="swiper mySwiper_main">
+            <h2>PRADASPHERE NOW</h2>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"> 
+                <a href="#">
+                  <img class="swiper_img" src="./images/pradasphere/pradasphere_shanghai.png" alt="pradasphere_shanghai">
+                </a>     
+                <div class="slide-img-txt-box">
+                  <strong class="slide_mini-tit">PRADASPHERE II</strong>
+                  <p>
+                    <span class="slide_img-exp">PRADASPHERE II 소식을 만나보세요.</span>
+                  </p>
+                  <div class="swiper_btn-group">
+                    <a href="#" class="swiper-btn-more">더 알아보기</a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img class="swiper_img" src="./images/pradasphere/Axiom.png" alt="Axiom">
+                </a>    
+                <div class="slide-img-txt-box">
+                  <strong class="slide_mini-tit">Prada x Axiom</strong>
+                  <p>
+                    <span class="slide_img-exp">Prada x Axiom의 소식을 만나보세요.</span>
+                  </p>
+                  <div class="swiper_btn-group">
+                    <a href="#" class="swiper-btn-more">더 알아보기</a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img class="swiper_img" src="./images/pradasphere/ss24_womanswear.png" alt="ss24_womanswear">
+                </a>    
+                <div class="slide-img-txt-box">
+                  <strong class="slide_mini-tit">SS24 Womanswear</strong>
+                  <p>
+                    <span class="slide_img-exp">SS24 Womanswear의  소식을  <br> 만나보세요</span>
+                  </p>
+                  <div class="swiper_btn-group">
+                    <a href="#" class="swiper-btn-more">더 알아보기</a>
+
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img class="swiper_img" src="./images/pradasphere/prada_mode_seoul.png" alt="prada_mode_seoul">
+                </a>    
+                <div class="slide-img-txt-box">
+                  <strong class="slide_mini-tit">Prada Mode Seoul</strong>
+                  <p>
+                    <span class="slide_img-exp">Prada Mode Seoul의 소식을  <br>  만나보세요.</span>
+                  </p>
+                  <div class="swiper_btn-group">
+                    <a href="#" class="swiper-btn-more">더 알아보기</a>
+             
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img class="swiper_img" src="./images/pradasphere/PradaFW23 pop-ups_at_Harrods.png" alt="PradaFW23_pop-ups_at_Harrods">
+                </a>    
+                <div class="slide-img-txt-box">
+                <strong class="slide_mini-tit">Pop-ups at Harrods</strong>
+                <p>
+                  <span class="slide_img-exp">PradaFW23 pop-ups at Harrods의 <br> 소식을 만나보세요.</span>
+                </p>
+                <div class="swiper_btn-group">
+                  <a href="#" class="swiper-btn-more">더 알아보기</a>
+
+                </div>
+              </div></div>
+            </div>
+          </section>
         </section>
       </main>
         </div>
