--- a/index.html
+++ b/index.html
@@ -226,28 +226,14 @@
                   </ul>
                 </div>
               </div>
-              <!-- <ul class="lst-categ">
-                <li class="categ-item">
-                  <a href="#">MAN</a>
-                </li>
-                <li class="categ-item">
-                  <a href="#">WOMAN</a>
-                </li>
-                <li class="categ-item">
-                  <a href="#">SHOE</a>
-                </li>
-                <li class="categ-item">
-                  <a href="#">BAG</a>
-                </li>
-              </ul> -->
-              <!-- <ul class="lst-categ2">
+              <ul class="lst-categ2">
                 <li class="categ-item2">
                   <a href="#" class="menu-wish">위시리스트</a>
                 </li>
                 <li>
                   <a href="#" class="menu-phone">문의하기</a>
                 </li>
-              </ul> -->
+              </ul>
             </div>
           </nav>
         </div>
