--- a/cart.html
+++ b/cart.html
@@ -282,7 +282,7 @@
       </header>
       <main id="main">
         <div class="cart_buy_list_wrap">
-          <div class="inner">
+          <div class="main_inner">
          <div class="toggle-area">
             <span>상품상세</span>
             <a href="#" class="icon"></a>
@@ -335,7 +335,7 @@
          </div>
         </div>
         <div class="coupon_wrap">
-          <div class="inner">
+          <div class="main_inner">
             <h2 class="coupon_tit">쿠폰 코드</h2>
             <form class="promo-form" action="/cart/promo" method="POST">
                 <div class="row code_wrap">
@@ -350,7 +350,7 @@
           </div>
         </div>
         <div class="cart-order_wrap">
-          <div class="inner">
+          <div class="main_inner">
             <h2 class="cart_order_tit">주문 상세내역</h2>
             <p class="list-item">
                 총 상품 금액(1)
