--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </header>
     <main id="main">
       <section class="container section-g section-collection">
-        <div class="inner">
+        <div class="main_inner">
           <!--YOUTUBE VIDEO-->
           <section class="youtube">
             <h2>2023 가을/겨울</h2>
@@ -260,9 +260,9 @@
           <section class="section-contents">
             <ul>
               <li>
-                <img src="https://i.pinimg.com/564x/b1/09/d0/b109d0badfacdf7ed06bd9d2211d78ea.jpg"
+                <img class="banner_img" src="./images/collection/woman.png"
                   alt="woman fashion" />
-                <div class="img-tit1">WOMAN WEARS</div>
+                <h2 class="img-tit1">WOMAN WEARS</h2>
                 <div class="img-txt-box">
                   <strong class="mini-tit"> Woman COLLECTION</strong>
                   <p>
@@ -425,10 +425,10 @@
               <ul>
               <li>
                 <a href="#">
-                  <img src="https://i.pinimg.com/564x/94/25/b2/9425b2e253186fa8b87ad146e9f61beb.jpg"
+                  <img  class="banner_img"  src="./images/collection/man.png"
                     alt="man fashion" />
                 </a>
-                <div class="img-tit2">MAN WEARS</div>
+                <h2 class="img-tit2">MAN WEARS</h2>
                 <div class="img-txt-box">
                   <strong class="mini-tit"> Man COLLECTION</strong>
                   <p>
@@ -442,31 +442,12 @@
               </li>
               <li>
                 <a href="#">
-                  <img src="https://i.pinimg.com/564x/53/5e/0f/535e0fce08c063b9fb2b88107b6a623a.jpg" alt="shoe" />
+                  <img  class="banner_img"  src="./images/collection/bag_collection.png" alt="BAG" />
                 </a>
-                <div class="img-tit3">
-                  SHOES <br>
-                  COLLECTION
-                </div>
-                <div class="img-txt-box">
-                  <strong class="mini-tit"> Shoes COLLECTION </strong>
-                  <p>
-                    <span class="img-exp">프라다만의 신발들을 만나보세요.</span>
-                  </p>
-                  <div class="btn-group">
-                    <a href="#" class="btn-more">더 알아보기</a>
-                    <a href="#" class="btn-pur">구매하기</a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="https://i.pinimg.com/564x/0b/fe/b0/0bfeb0896f523391b5c341cf42677238.jpg" alt="BAG" />
-                </a>
-                <div class="img-tit3">
+                <h2 class="img-tit2_bag">
                   BAG <br>
                   COLLECTION
-                </div>
+                </h2>
                 <div class="img-txt-box">
                   <strong class="mini-tit"> BAG COLLECTION </strong>
                   <p>
@@ -479,11 +460,31 @@
                 </div>
               </li>
               <li>
+                <a href="#">
+                  <img  class="banner_img"  src="./images/collection/shoes.png" alt="shoe" />
+                </a>
+                <h2 class="img-tit2_shoes">
+                  SHOES <br>
+                  COLLECTION
+                </h2>
+                <div class="img-txt-box">
+                  <strong class="mini-tit"> SHOES COLLECTION </strong>
+                  <p>
+                    <span class="img-exp">프라다만의 신발들을 만나보세요.</span>
+                  </p>
+                  <div class="btn-group">
+                    <a href="#" class="btn-more">더 알아보기</a>
+                    <a href="#" class="btn-pur">구매하기</a>
+                  </div>
+                </div>
+              </li>
+             
+              <li>
                 <div class="prada-gall">
                   <a href="#">
-                    <img src="https://i.pinimg.com/564x/03/1f/0c/031f0cb4ff400354a961b1163fb9c915.jpg"
+                    <img  class="banner_img-gallary"  src="./images/collection/gallaria.png"
                       alt="prada gall" />
-                    <div class="img-tit4">PRADA GALLERIA</div>
+                    <h2 class="img-tit4">PRADA GALLERIA</h2>
                   </a>
                   <a href="#" class="btn-pur2">
                     BUY
@@ -589,6 +590,7 @@
               </div></div>
             </div>
           </section>
+        </div>
         </section>
       </main>
         </div>
